<resources>
    <string name="app_name">Quizdroid</string>
    <string name="subject_name_01">Math</string>
    <string name="subject_name_02">Physics</string>
    <string name="subject_name_03">Marvel Superheroes</string>
    <string name="topic_overview">Topic Overview</string>
    <string name="math_summary">Math is a subject that involves a lot of numbers. And sometimes letters. You calculate
        stuff. Yeah!
    </string>
    <string name="physics_summary">Physics is all about gravity and forces and movement or whatever. And light I guess?
        I don\'t know, don\'t ask me. I never took Physics in college!
    </string>
    <string name="marvel_summary">Marvel superheroes are fictional characters that have super powers and fight crime and
        do other cool stuff. My favorite Marvel superhero is Miss Marvel! Also Spidergwen. Also Miles Morales. Yee.
    </string>
    <string name="total_questions">Total Questions:</string>
    <string name="questions">1</string>
    <string name="begin_button">Begin</string>
    <string name="question">1. What is a question?</string>
    <string name="answer_01">I don\'t know.</string>
    <string name="answer_02">An inquisitive statement.</string>
    <string name="answer_03">42</string>
    <string name="answer_04">Download \'But You Seem Fine\' from the Google Play Store!!</string>
    <string name="submit_button">Submit</string>
    <string name="your_answer">Your answer: </string>
    <string name="correct_answer">Correct answer: Download \'But You Seem Fine\' from the Google Play Store!!</string>
    <string name="answer">Answer</string>
    <string name="finish_button">Finish</string>
</resources>
