<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
        <TextView
                android:text="@string/topic_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/topicOverviewMarvel" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:paddingTop="16dp"/>
        <TextView
                android:text="@string/marvel_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/marvelSummary" android:textAlignment="center"
                android:textSize="18sp" android:paddingTop="16dp"/>
        <TextView
                android:text="@string/total_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/totalQuestionsMarvel" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:paddingTop="16dp"/>
        <TextView
                android:text="@string/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/questionsMarvel" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:paddingBottom="32dp"/>
        <Button
                android:text="@string/begin_button"
                android:layout_width="288dp"
                android:layout_height="99dp" android:id="@+id/marvelBegin"
        />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>