<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="-55dp"
            android:gravity="center_horizontal">
        <TextView
                android:text="@string/topic_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/topicOverviewMath"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:textAlignment="center"
                android:paddingTop="16dp"/>
        <TextView
                android:text="@string/math_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mathSummary" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="18sp"
                android:paddingTop="16dp"
        />
        <TextView
                android:text="@string/total_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/totalQuestionsMath" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:paddingTop="16dp"/>
        <TextView
                android:text="@string/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/questionsMath" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:paddingBottom="32dp"/>
        <Button
                android:text="@string/begin_button"
                android:layout_width="265dp"
                android:layout_height="88dp" android:id="@+id/mathBegin"
                />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>