<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
        <Button
                android:text="@string/subject_name_01"
                android:layout_width="293dp"
                android:layout_height="wrap_content" android:id="@+id/mathButton"/>
        <Button
                android:text="@string/subject_name_02"
                android:layout_width="293dp"
                android:layout_height="wrap_content" android:id="@+id/physicsButton"/>
        <Button
                android:text="@string/subject_name_03"
                android:layout_width="293dp"
                android:layout_height="wrap_content" android:id="@+id/marvelButton"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>