<?xml version="1.0" encoding="utf-8"?>
<android.support.linear.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     xmlns:tools="http://schemas.android.com/tools"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:padding="30dp"
                                     android:orientation="horizontal"
                                     android:foreground="?android:selectableItemBackground">

    <TextView
            android:id="@+id/questionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Question"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginStart="12dp"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="251dp" app:layout_constraintBottom_toBottomOf="parent"
            android:paddingBottom="32dp">
        <RadioButton
                android:text="@string/answer_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/answer01" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/answer_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/answer02" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/answer_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/answer03" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/answer_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/answer04" android:layout_weight="1"/>
    </RadioGroup>

</android.support.linear.LinearLayout>