<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnswerActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/titleAnswer" android:text="@string/answer"
                android:textAlignment="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/yourAnswer"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/correctAnswer"
                android:text="@string/correct_answer"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/numberCorrect"/>
        <Button
                android:text="@string/finish_button"
                android:layout_width="269dp"
                android:layout_height="wrap_content" android:id="@+id/buttonFinish"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>